creamos componente lista de invitados

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,5 @@
 <!-- Interpolation para acceder a las propiedades del componente-->
 <h1 class="text-center"> {{title}} </h1>
+<div class="container">
+<app-lista-clientes></app-lista-clientes>
+</div>
