--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,25 @@
+<nav class= "navbar navbar-expand-sm bg-primary navbar-dark">
+    <ul class = "navbar-nav">
+        <li class = "nav-item">
+            <!-- Usamos routerLink para proveer un path  y routerLinkActive para identificar la ruta activa -->
+            <a routerLink="clientes" routerLinkActive="active" class = "nav-link" > Lista de Clientes </a>
+        </li>
+        <li class = "nav-item">
+            <a routerLink="crear-cliente" routerLinkActive="active" class = "nav-link" > Añadimos Cliente </a>
+        </li>
+        <li class = "nav-item">
+            <a routerLink="gestion-habitaciones" routerLinkActive="active" class = "nav-link" > Gestion Habitaciones </a>
+        </li>
+    </ul>
+</nav>
+
 <!-- Interpolation para acceder a las propiedades del componente-->
 <h1 class="text-center"> {{title}} </h1>
 <div class="container">
-<app-lista-clientes></app-lista-clientes>
+    <router-outlet></router-outlet>
 </div>
+<footer class = "footer">
+    <div class="container">
+        <span>Proyecto Daniel Fernández</span>
+    </div>
+</footer>
