--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,11 +10,13 @@
         <li class = "nav-item">
             <a routerLink="gestion-habitaciones" routerLinkActive="active" class = "nav-link" > Gestion Habitaciones </a>
         </li>
+<!--         <li class = "nav-item">
+            <a routerLink="gestion-reservas" routerLinkActive="active" class = "nav-link" > Gestion Reservas </a>
+        </li> -->
     </ul>
 </nav>
 
 <!-- Interpolation para acceder a las propiedades del componente-->
-<h1 class="text-center"> {{title}} </h1>
 <div class="container">
     <router-outlet></router-outlet>
 </div>
