--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,9 +10,9 @@
         <li class = "nav-item">
             <a routerLink="gestion-habitaciones" routerLinkActive="active" class = "nav-link" > Gestion Habitaciones </a>
         </li>
-<!--         <li class = "nav-item">
+        <li class = "nav-item">
             <a routerLink="gestion-reservas" routerLinkActive="active" class = "nav-link" > Gestion Reservas </a>
-        </li> -->
+        </li>
     </ul>
 </nav>
 
