--- a/src/app/gestion-reservas/gestion-reservas.component.html
+++ b/src/app/gestion-reservas/gestion-reservas.component.html
@@ -1,6 +1,6 @@
-<!-- <h1 class="mb-4">Reservas</h1> -->
+<h1 class="mb-4">Reservas</h1>
 
-<!-- <table class="table table-striped">
+<table class="table table-striped">
     <tr>
         <th>Cliente</th>
         <th>Habitacion</th>
@@ -20,7 +20,7 @@
         </td>
     </tr>
 </table> -->
-<!-- 
+
 <h2 class="mb-4">Añadir reserva</h2>
 
 <form (ngSubmit)="addReserva()" class="form-inline">
@@ -50,4 +50,4 @@
         <input id="checkOutDate" class="form-control" type="date" [(ngModel)]="checkOutDate" name="checkOutDate">
     </div>
     <button type="submit" class="btn btn-primary">Añadir reserva</button>
-</form> -->
+</form>
